<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">
    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_username"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_note_text"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/text_view_is_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>
        <RadioGroup
            android:id="@+id/radio_is_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="25dp">

            <RadioButton
                android:id="@+id/radio_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_is_active"
                android:textSize="@dimen/add_edit_textsize"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_inactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_is_inactive"
                android:textSize="@dimen/add_edit_textsize"/>

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_padding">

        <EditText
            android:id="@+id/edit_text_date"
            android:hint="@string/add_date"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:gravity="left" />
        <ImageView
            android:id="@+id/image_view_date"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <!--<DatePicker
            android:id="@+id/dialog_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->
    </LinearLayout>
    <Button
        android:id="@+id/button_add_update_task"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_task"
        android:layout_gravity="center"/>
</LinearLayout>